[gd_scene load_steps=2 format=3 uid="uid://o4dyoxm5eih1"]

[ext_resource type="Script" path="res://play_test.gd" id="1_o1cky"]

[node name="PlayTest" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_o1cky")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 10.0
offset_right = 112.0
offset_bottom = 36.0
text = "Player 1"

[node name="P1Stats" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 38.0
offset_right = 209.0
offset_bottom = 225.0

[node name="hats" type="Control" parent="P1Stats"]
anchors_preset = 0
offset_right = 98.0
offset_bottom = 28.0

[node name="Label" type="Label" parent="P1Stats/hats"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 26.0
text = "Hats avail: "

[node name="Value" type="Label" parent="P1Stats/hats"]
layout_mode = 0
offset_left = 89.0
offset_right = 140.0
offset_bottom = 26.0
text = "VALUE"

[node name="STAM" type="Control" parent="P1Stats"]
anchors_preset = 0
offset_left = 2.0
offset_top = 30.0
offset_right = 122.0
offset_bottom = 59.0

[node name="Label" type="Label" parent="P1Stats/STAM"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 26.0
text = "STAM:"

[node name="Value" type="Label" parent="P1Stats/STAM"]
layout_mode = 0
offset_left = 57.0
offset_right = 108.0
offset_bottom = 26.0
text = "VALUE"

[node name="DEF" type="Control" parent="P1Stats"]
anchors_preset = 0
offset_left = 2.0
offset_top = 58.0
offset_right = 122.0
offset_bottom = 87.0

[node name="Label" type="Label" parent="P1Stats/DEF"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 26.0
text = "DEF:"

[node name="Value" type="Label" parent="P1Stats/DEF"]
layout_mode = 0
offset_left = 47.0
offset_right = 98.0
offset_bottom = 26.0
text = "VALUE"

[node name="CHA" type="Control" parent="P1Stats"]
anchors_preset = 0
offset_left = 2.0
offset_top = 84.0
offset_right = 122.0
offset_bottom = 113.0

[node name="Label" type="Label" parent="P1Stats/CHA"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 26.0
text = "CHA:"

[node name="Value" type="Label" parent="P1Stats/CHA"]
layout_mode = 0
offset_left = 47.0
offset_right = 98.0
offset_bottom = 26.0
text = "VALUE"

[node name="WIT" type="Control" parent="P1Stats"]
anchors_preset = 0
offset_left = 1.0
offset_top = 113.0
offset_right = 121.0
offset_bottom = 142.0

[node name="Label" type="Label" parent="P1Stats/WIT"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 26.0
text = "WIT:"

[node name="Value" type="Label" parent="P1Stats/WIT"]
layout_mode = 0
offset_left = 49.0
offset_top = -3.0
offset_right = 100.0
offset_bottom = 23.0
text = "VALUE"

[node name="BaseDmg" type="Control" parent="P1Stats"]
anchors_preset = 0
offset_left = 1.0
offset_top = 171.0
offset_right = 121.0
offset_bottom = 200.0

[node name="Label" type="Label" parent="P1Stats/BaseDmg"]
layout_mode = 0
offset_top = -25.0
offset_right = 82.0
offset_bottom = 1.0
text = "Base Dmg:"

[node name="Value" type="Label" parent="P1Stats/BaseDmg"]
layout_mode = 0
offset_left = 88.0
offset_top = -24.0
offset_right = 139.0
offset_bottom = 2.0
text = "VALUE"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 685.0
offset_top = 10.0
offset_right = 747.0
offset_bottom = 36.0
text = "Player 2"

[node name="P2Stats" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 685.0
offset_top = 38.0
offset_right = 844.0
offset_bottom = 225.0

[node name="hats" type="Control" parent="P2Stats"]
anchors_preset = 0
offset_right = 98.0
offset_bottom = 28.0

[node name="Label" type="Label" parent="P2Stats/hats"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 26.0
text = "Hats avail: "

[node name="Value" type="Label" parent="P2Stats/hats"]
layout_mode = 0
offset_left = 87.0
offset_top = 1.0
offset_right = 138.0
offset_bottom = 27.0
text = "VALUE"

[node name="STAM" type="Control" parent="P2Stats"]
anchors_preset = 0
offset_left = 2.0
offset_top = 30.0
offset_right = 122.0
offset_bottom = 59.0

[node name="Label" type="Label" parent="P2Stats/STAM"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 26.0
text = "STAM:"

[node name="Value" type="Label" parent="P2Stats/STAM"]
layout_mode = 0
offset_left = 57.0
offset_right = 108.0
offset_bottom = 26.0
text = "VALUE"

[node name="DEF" type="Control" parent="P2Stats"]
anchors_preset = 0
offset_left = 2.0
offset_top = 58.0
offset_right = 122.0
offset_bottom = 87.0

[node name="Label" type="Label" parent="P2Stats/DEF"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 26.0
text = "DEF:"

[node name="Value" type="Label" parent="P2Stats/DEF"]
layout_mode = 0
offset_left = 47.0
offset_right = 98.0
offset_bottom = 26.0
text = "VALUE"

[node name="CHA" type="Control" parent="P2Stats"]
anchors_preset = 0
offset_left = 2.0
offset_top = 84.0
offset_right = 122.0
offset_bottom = 113.0

[node name="Label" type="Label" parent="P2Stats/CHA"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 26.0
text = "CHA:"

[node name="Value" type="Label" parent="P2Stats/CHA"]
layout_mode = 0
offset_left = 47.0
offset_right = 98.0
offset_bottom = 26.0
text = "VALUE"

[node name="WIT" type="Control" parent="P2Stats"]
anchors_preset = 0
offset_left = 1.0
offset_top = 113.0
offset_right = 121.0
offset_bottom = 142.0

[node name="Label" type="Label" parent="P2Stats/WIT"]
layout_mode = 0
offset_right = 44.0
offset_bottom = 26.0
text = "WIT:"

[node name="Value" type="Label" parent="P2Stats/WIT"]
layout_mode = 0
offset_left = 49.0
offset_top = -3.0
offset_right = 100.0
offset_bottom = 23.0
text = "VALUE"

[node name="BaseDmg" type="Control" parent="P2Stats"]
anchors_preset = 0
offset_left = 1.0
offset_top = 171.0
offset_right = 121.0
offset_bottom = 200.0

[node name="Label" type="Label" parent="P2Stats/BaseDmg"]
layout_mode = 0
offset_left = 1.0
offset_top = -26.0
offset_right = 83.0
text = "Base Dmg:"

[node name="Value" type="Label" parent="P2Stats/BaseDmg"]
layout_mode = 0
offset_left = 89.0
offset_top = -25.0
offset_right = 140.0
offset_bottom = 1.0
text = "VALUE"

[node name="Outcomes" type="GridContainer" parent="."]
offset_left = 378.0
offset_top = 58.0
offset_right = 649.0
offset_bottom = 240.0

[node name="Timer" type="Timer" parent="Outcomes"]
wait_time = 0.5
one_shot = true

[node name="P1Choices" type="GridContainer" parent="."]
offset_left = 46.0
offset_top = 263.0
offset_right = 305.0
offset_bottom = 524.0

[node name="P2Choices" type="GridContainer" parent="."]
offset_left = 688.0
offset_top = 258.0
offset_right = 913.0
offset_bottom = 523.0

[node name="Round" type="Control" parent="."]
anchors_preset = 0
offset_left = 353.0
offset_top = 5.0
offset_right = 393.0
offset_bottom = 45.0

[node name="Label" type="Label" parent="Round"]
layout_mode = 1
anchors_preset = -1
anchor_right = 3.225
anchor_bottom = 0.8
offset_left = 56.0
offset_top = 6.0
offset_right = -18.0
text = "Round:"

[node name="Value" type="Label" parent="Round"]
layout_mode = 0
offset_left = 120.0
offset_top = 7.0
offset_right = 175.0
offset_bottom = 33.0
text = "VALUE"
